golden/error/_import_cycle_a.rcl
// TODO: Make relative imports work.
import "golden/error/_import_cycle_b.rcl"
